# drone-object-detection-ROS

./: CMakeLists.txt  package.xml
config/: hsv_params.yaml
launch/: main.launch  simulation.launch
msg/: BlobDetection.msg  ObjectPosition.msg
scripts/: camera_processor.py  drone_controller.py  mission_manager.py  object_detector.py
worlds/: drone_world.world
