<package format="2">
  <name>drone_autonomous</name>
  <version>0.0.1</version>
  <description>Autonomous drone system with precision landing</description>

  <maintainer email="reegii90@gmail.com">Regiana hermawan</maintainer>
  <license>MIT</license>

  <!-- Build Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Run Dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-dronekit</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>